app/assets/stylesheets/tabs/_entity_list.css.sass
.entity-list
  .main-header
    +stretch(0, 0, false, 0)
    width: 100%
  .main-results-wrapper
    +stretch(false, 0, 0, 0)
    top: 27px
    overflow-y: auto
    .main-results
      border-left: none
  .tab-header
    +flexbox
    +justify-content(space-between)
    +align-content(stretch)

    .tab-title
      width: $left-nav-width + 1%
      padding: $left-nav-padding
      +tab-header-title
      h1
        line-height: 40px

    .add-entity
      +flex-grow(0)
      +flex-basis(12%)
      +justify-content(flex-end)
      +flexbox
      +align-items(center)
      padding-right: 20px
      .default-button,
      .dropdown-btn
        width: 100%
        max-width: 200px
      .default-button
        overflow: hidden
        margin: 0
        height: $tab-header-field-height
        white-space: nowrap
        text-overflow: ellipsis

    .dropdown-menu
      $new-entities-dropdown-height: 600px
      max-height: $new-entities-dropdown-height
      .dropdown-menu-list
        max-height: $new-entities-dropdown-height - 30px
        overflow-y: auto

  .tab-main
    .left-nav
      overflow-y: auto
      @extend .tab-workbench
      padding-left: 20px
      padding-right: 20px
      padding: $tab-main-margin-top 20px 0
    .with-left-nav
      margin-top: $tab-main-margin-top // padding is ignored by absolute children
      @extend .tab-workbench
      @extend .expand-vertically

  .left-nav-bottom
    position: absolute
    background: white
    bottom: 0
    right: 0
    width: 100%
    padding: 1.5em 0 2em
    span
      color: $light-gray
      line-height: 1.3em
      padding: .1em 0
      &:first-child
        margin-left: 29px
        margin-right: .6em
        padding-right: .6em
    span:hover
      color: $link-blue
      cursor: pointer

  .result-list
    tbody tr
      @extend %tr-clickable

  .view-customizer
    position: absolute
    right: 0
    top: 0
    height: 27px
    .dropdown-toggle
      line-height: 28px
      margin-right: 5px

